# polyline

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lib/: CMakeLists.txt  Common.h  MathUtils.cpp  MathUtils.h  Point.cpp  Point.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  PointReaderUtils.cpp  PointReaderUtils.h  Polyline.cpp  Polyline2D.cpp  Polyline2D.h  Polyline3D.cpp  Polyline3D.h  Utils.cpp  Utils.h  Vector.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h
src/: CMakeLists.txt  Common.h  MathUtils.cpp  Point.cpp  Point.h  Polyline.cpp  Utils.cpp  Utils.h  Vector.cpp  Vector.h  main.cpp  main_task1.cpp  main_task2.cpp
tests/: 2Dtests.cpp  3Dtests.cpp  CMakeLists.txt  main.cpp  test.cpp
